--- a/k8s-helm/postgree-db/values.yaml
+++ b/k8s-helm/postgree-db/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: postgres
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -41,16 +41,16 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 5432
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
+  enabled: true
+  className: "nginx"
+  # annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: db.app-cats.local
       paths:
         - path: /
           pathType: ImplementationSpecific
@@ -79,16 +79,16 @@ autoscaling:
   # targetMemoryUtilizationPercentage: 80
 
 # Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
+volumes:
+- name: pg-db-cats
 #   secret:
 #     secretName: mysecret
 #     optional: false
 
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
+volumeMounts:
+- name: pg-db-cats
+  mountPath: "/etc/lib/postgresql/db-cats"
 #   readOnly: true
 
 nodeSelector: {}
